--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
 
-    location {
+    location / {
 	return 404;
     }
 
-    localtion ^~ /uploads/ {
+    location ^~ /uploads/ {
 	alias /home/box/web/uploads;
     }
 
