Add nginx logging

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,14 @@
 server {
     listen 80;
 
+#    access_log /home/box/access.log;
+#    error_log /home/box/error.log debug;
+
     location / {
 	return 404;
     }
 
-    location ^~ /uploads/ {
+    location ^~ /uploads {
 	alias /home/box/web/uploads;
     }
 
