--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -15,5 +15,9 @@ server {
     location ~ \..+$ {
 	root /home/box/web/public;
     }
+
+    location /hello/ {
+        proxy_pass http://127.0.0.1:8080;
+    }
 }
 
