--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,7 +5,8 @@ server {
 #    error_log /home/box/error.log debug;
 
     location / {
-	return 404;
+#	return 404;
+        proxy_pass http://127.0.0.1:8000;
     }
 
     location ^~ /uploads {
