--- a/etc/ask.conf
+++ b/etc/ask.conf
@@ -4,7 +4,7 @@ CONFIG = {
          '--bind=0.0.0.0:8000',
         '--workers=2',
         '--timeout=10',
-        'wsgi:app',
+        'ask.wsgi',
     ),
 }
 
