Add django logging

--- a/etc/ask.conf
+++ b/etc/ask.conf
@@ -1,7 +1,9 @@
 CONFIG = {
     'working_dir': '/home/box/web/ask',
     'args': (
-         '--bind=0.0.0.0:8000',
+        '--bind=0.0.0.0:8000',
+        '--access-logfile=/home/box/dj-access.log',
+        '--error-logfile=/home/box/dj-access.log',
         '--workers=2',
         '--timeout=10',
         'ask.wsgi',
