--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name _;
 
-#    access_log /home/box/access.log;
-#    error_log /home/box/error.log debug;
+    access_log /home/box/access.log;
+    error_log /home/box/error.log;
 
     location / {
 #	return 404;
